[gd_scene load_steps=102 format=3 uid="uid://celr1t2vxkewx"]

[ext_resource type="Script" uid="uid://bbace2tit2qbj" path="res://Scripts/Poems/Hippo/Target.gd" id="1_3lg0m"]
[ext_resource type="Texture2D" uid="uid://0k5jt5oo42c3" path="res://Animations/Buffy/Bully0.0000.png" id="1_7lese"]
[ext_resource type="Texture2D" uid="uid://cj40xb5praged" path="res://Animations/Buffy/Bully0.0001.png" id="2_2b6w8"]
[ext_resource type="Texture2D" uid="uid://d2xhceekd0djf" path="res://Animations/Buffy/Bully0.0002.png" id="3_2l11a"]
[ext_resource type="Texture2D" uid="uid://rkdwfb3umnqg" path="res://Animations/Buffy/Bully0.0003.png" id="4_27q8y"]
[ext_resource type="Texture2D" uid="uid://ema2ppku0juf" path="res://Animations/Buffy/Bully0.0004.png" id="5_jofmm"]
[ext_resource type="Texture2D" uid="uid://camrn6qm0rjk5" path="res://Animations/Buffy/Bully0.0005.png" id="6_7fy06"]
[ext_resource type="Texture2D" uid="uid://bg7rxrt45phqk" path="res://Animations/Buffy/Bully0.0006.png" id="7_6yfdl"]
[ext_resource type="Texture2D" uid="uid://ckhune1jh3q63" path="res://Animations/Buffy/Bully0.0007.png" id="8_ihuce"]
[ext_resource type="Texture2D" uid="uid://cc1wllh6rd3cu" path="res://Animations/Buffy/Bully0.0008.png" id="9_5ovb0"]
[ext_resource type="Texture2D" uid="uid://cwisbs6toinf6" path="res://Animations/Buffy/Bully0.0009.png" id="10_rot1j"]
[ext_resource type="Texture2D" uid="uid://qryly4bdx55o" path="res://Animations/Buffy/Bully0.0010.png" id="11_g6q7a"]
[ext_resource type="Texture2D" uid="uid://b1dnac3nt64na" path="res://Animations/Buffy/Bully0.0011.png" id="12_ah7cb"]
[ext_resource type="Texture2D" uid="uid://68lolmlaq4e1" path="res://Animations/Buffy/Bully0.0012.png" id="13_1cx7e"]
[ext_resource type="Texture2D" uid="uid://c6dtgg72trask" path="res://Animations/Buffy/Bully0.0013.png" id="14_twmhp"]
[ext_resource type="Texture2D" uid="uid://ceuhx0m8grbwe" path="res://Animations/Buffy/Bully0.0014.png" id="15_f1w4n"]
[ext_resource type="Texture2D" uid="uid://bnhkvrq4x8kj1" path="res://Animations/Buffy/Bully0.0015.png" id="16_bj6b7"]
[ext_resource type="Texture2D" uid="uid://cwmcdadwevat4" path="res://Animations/Buffy/Bully0.0016.png" id="17_uinrf"]
[ext_resource type="Texture2D" uid="uid://xrrggpgddodh" path="res://Animations/Buffy/Bully0.0017.png" id="18_r46as"]
[ext_resource type="Texture2D" uid="uid://c7yqrt8netr08" path="res://Animations/Buffy/Bully0.0018.png" id="19_k8g8u"]
[ext_resource type="Texture2D" uid="uid://w5sdpaixfiuj" path="res://Animations/Buffy/Bully0.0019.png" id="20_2dm2c"]
[ext_resource type="Texture2D" uid="uid://b846chuna4061" path="res://Animations/Buffy/Bully0.0020.png" id="21_ce2fw"]
[ext_resource type="Texture2D" uid="uid://dmna8wlsnhkqi" path="res://Animations/Buffy/Bully0.0021.png" id="22_ju184"]
[ext_resource type="Texture2D" uid="uid://bfn87yd8kb77k" path="res://Animations/Buffy/Bully0.0022.png" id="23_our6u"]
[ext_resource type="Texture2D" uid="uid://c5xbmdnos5ano" path="res://Animations/Buffy/Bully0.0023.png" id="24_8ui1b"]
[ext_resource type="Texture2D" uid="uid://b3qpfekmlhpdh" path="res://Animations/Buffy/Bully0.0024.png" id="25_cv5b8"]
[ext_resource type="Texture2D" uid="uid://cggamlmydbcfk" path="res://Animations/Buffy/Bully0.0025.png" id="26_v7xlf"]
[ext_resource type="Texture2D" uid="uid://0vt2ibynslt7" path="res://Animations/Buffy/Bully0.0026.png" id="27_muvbc"]
[ext_resource type="Texture2D" uid="uid://kpjgsc0jlya2" path="res://Animations/Buffy/Bully0.0027.png" id="28_xxrml"]
[ext_resource type="Texture2D" uid="uid://bl3x6wfthi2v4" path="res://Animations/Buffy/Bully0.0028.png" id="29_b42xr"]
[ext_resource type="Texture2D" uid="uid://chdyqhn6p5j3n" path="res://Animations/Buffy/Bully0.0029.png" id="30_cmb6h"]
[ext_resource type="Texture2D" uid="uid://5u0qbrt3m68p" path="res://Animations/Buffy/Bully0.0030.png" id="31_wrlit"]
[ext_resource type="Texture2D" uid="uid://c82er2fqlq7i7" path="res://Animations/Buffy/Bully0.0031.png" id="32_8hhq4"]
[ext_resource type="Texture2D" uid="uid://ddny656v6oyqh" path="res://Animations/Buffy/Bully0.0032.png" id="33_vemjc"]
[ext_resource type="Texture2D" uid="uid://1ufa100ltawr" path="res://Animations/Buffy/Bully0.0033.png" id="34_bqrxk"]
[ext_resource type="Texture2D" uid="uid://b3f44f3yaeil6" path="res://Animations/Buffy/Bully0.0034.png" id="35_hdim7"]
[ext_resource type="Texture2D" uid="uid://bv7ap1squ801y" path="res://Animations/Buffy/Bully0.0035.png" id="36_cgbkt"]
[ext_resource type="Texture2D" uid="uid://cue2bdk0uf8af" path="res://Animations/Buffy/Bully0.0036.png" id="37_8uo3d"]
[ext_resource type="Texture2D" uid="uid://0vt7qxqx1wr0" path="res://Animations/Buffy/Bully0.0037.png" id="38_4jqf2"]
[ext_resource type="Texture2D" uid="uid://crv3leu53fnt5" path="res://Animations/Buffy/Bully0.0038.png" id="39_kcyw8"]
[ext_resource type="Texture2D" uid="uid://w36le21fn3a1" path="res://Animations/Buffy/Bully0.0039.png" id="40_nv605"]
[ext_resource type="Texture2D" uid="uid://due40f0wsmat0" path="res://Animations/Buffy/Bully0.0040.png" id="41_gf7bl"]
[ext_resource type="Texture2D" uid="uid://d4klv4vek0xqv" path="res://Animations/Buffy/Bully0.0041.png" id="42_y14cu"]
[ext_resource type="Texture2D" uid="uid://cjpncetl36stc" path="res://Animations/Buffy/Bully0.0042.png" id="43_5uklu"]
[ext_resource type="Texture2D" uid="uid://cosetcn7erqmj" path="res://Animations/Buffy/Bully0.0043.png" id="44_5nra8"]
[ext_resource type="Texture2D" uid="uid://sa20uxfmewti" path="res://Animations/Buffy/Bully0.0044.png" id="45_13x6n"]
[ext_resource type="Texture2D" uid="uid://mah2oe88sa81" path="res://Animations/Buffy/Bully0.0045.png" id="46_rb573"]
[ext_resource type="Texture2D" uid="uid://cl8euv2b5v7mh" path="res://Animations/Buffy/Bully0.0046.png" id="47_ocwye"]
[ext_resource type="Texture2D" uid="uid://b77vb7bdd60jt" path="res://Animations/Buffy/Bully0.0047.png" id="48_xn4bc"]
[ext_resource type="Texture2D" uid="uid://d02sxrqg2nqs8" path="res://Animations/Buffy/Bully1.png" id="49_1co83"]
[ext_resource type="Texture2D" uid="uid://blkg16gutnwoh" path="res://Animations/HippoG/Hippo0.0000.png" id="50_dfr6v"]
[ext_resource type="Texture2D" uid="uid://c3cth02blaytd" path="res://Animations/HippoG/Hippo0.0001.png" id="51_sfrsk"]
[ext_resource type="Texture2D" uid="uid://dyxtdbnplrj5t" path="res://Animations/HippoG/Hippo0.0002.png" id="52_j7ddr"]
[ext_resource type="Texture2D" uid="uid://c65mrebwhkns5" path="res://Animations/HippoG/Hippo0.0003.png" id="53_mnkb4"]
[ext_resource type="Texture2D" uid="uid://bnj4ksknpp76x" path="res://Animations/HippoG/Hippo0.0004.png" id="54_lb4u7"]
[ext_resource type="Texture2D" uid="uid://d1gpbwpqsbevu" path="res://Animations/HippoG/Hippo0.0005.png" id="55_uruej"]
[ext_resource type="Texture2D" uid="uid://behnes4cjb0j7" path="res://Animations/HippoG/Hippo0.0006.png" id="56_l25sw"]
[ext_resource type="Texture2D" uid="uid://vtjl8jdndwph" path="res://Animations/HippoG/Hippo0.0007.png" id="57_d77mw"]
[ext_resource type="Texture2D" uid="uid://dahre7kem8elf" path="res://Animations/HippoG/Hippo0.0008.png" id="58_k8jix"]
[ext_resource type="Texture2D" uid="uid://dhmkdatdg4u0n" path="res://Animations/HippoG/Hippo0.0009.png" id="59_jeer1"]
[ext_resource type="Texture2D" uid="uid://xi1s45q0n0j8" path="res://Animations/HippoG/Hippo0.0010.png" id="60_2rdqv"]
[ext_resource type="Texture2D" uid="uid://cvqassurncj7m" path="res://Animations/HippoG/Hippo0.0011.png" id="61_inwjx"]
[ext_resource type="Texture2D" uid="uid://bao8aui863pp2" path="res://Animations/HippoG/Hippo0.0012.png" id="62_swkax"]
[ext_resource type="Texture2D" uid="uid://ddlhwy1fng0ic" path="res://Animations/HippoG/Hippo0.0013.png" id="63_q70bg"]
[ext_resource type="Texture2D" uid="uid://dn5a68tc2sd23" path="res://Animations/HippoG/Hippo0.0014.png" id="64_fl5f7"]
[ext_resource type="Texture2D" uid="uid://dj0c7allaqfs3" path="res://Animations/HippoG/Hippo0.0015.png" id="65_1v6ll"]
[ext_resource type="Texture2D" uid="uid://bo51rkkbc6n2y" path="res://Animations/HippoG/Hippo0.0016.png" id="66_dxt5m"]
[ext_resource type="Texture2D" uid="uid://c6nmtamlga8kr" path="res://Animations/HippoG/Hippo0.0017.png" id="67_rikbl"]
[ext_resource type="Texture2D" uid="uid://4phioi265mjq" path="res://Animations/HippoG/Hippo0.0018.png" id="68_m7t10"]
[ext_resource type="Texture2D" uid="uid://ca8d3lbxpo6py" path="res://Animations/HippoG/Hippo0.0019.png" id="69_uocar"]
[ext_resource type="Texture2D" uid="uid://c6ebwdljjmcfw" path="res://Animations/HippoG/Hippo0.0020.png" id="70_iegl3"]
[ext_resource type="Texture2D" uid="uid://bnenklbj5ovyj" path="res://Animations/HippoG/Hippo0.0021.png" id="71_nr5vv"]
[ext_resource type="Texture2D" uid="uid://bgyp63ajpba40" path="res://Animations/HippoG/Hippo0.0022.png" id="72_mw7fe"]
[ext_resource type="Texture2D" uid="uid://ddflm8advvtbg" path="res://Animations/HippoG/Hippo0.0023.png" id="73_xhvuo"]
[ext_resource type="Texture2D" uid="uid://cd0jqyod2ulfb" path="res://Animations/HippoG/Hippo0.0024.png" id="74_npmmt"]
[ext_resource type="Texture2D" uid="uid://wy5q5jef5vkv" path="res://Animations/HippoG/Hippo0.0025.png" id="75_fm0k7"]
[ext_resource type="Texture2D" uid="uid://h1c8fyim8naf" path="res://Animations/HippoG/Hippo0.0026.png" id="76_vfvy1"]
[ext_resource type="Texture2D" uid="uid://ctbqxxbk3umk" path="res://Animations/HippoG/Hippo0.0027.png" id="77_ath0v"]
[ext_resource type="Texture2D" uid="uid://dpjf5c27h2roa" path="res://Animations/HippoG/Hippo0.0028.png" id="78_yhpis"]
[ext_resource type="Texture2D" uid="uid://cme3qdmtafoco" path="res://Animations/HippoG/Hippo0.0029.png" id="79_2d380"]
[ext_resource type="Texture2D" uid="uid://w8bl8og3dcfj" path="res://Animations/HippoG/Hippo0.0030.png" id="80_cgdyl"]
[ext_resource type="Texture2D" uid="uid://b4nrqacir4gt0" path="res://Animations/HippoG/Hippo0.0031.png" id="81_112y2"]
[ext_resource type="Texture2D" uid="uid://dqrpdcbuq5wjt" path="res://Animations/HippoG/Hippo0.0032.png" id="82_4r418"]
[ext_resource type="Texture2D" uid="uid://b1tu74rdf23sc" path="res://Animations/HippoG/Hippo0.0033.png" id="83_ct24y"]
[ext_resource type="Texture2D" uid="uid://c057cmdvp5v5g" path="res://Animations/HippoG/Hippo0.0034.png" id="84_f2orq"]
[ext_resource type="Texture2D" uid="uid://b67mo58c3syra" path="res://Animations/HippoG/Hippo0.0035.png" id="85_galet"]
[ext_resource type="Texture2D" uid="uid://dph4g8dv0jvxe" path="res://Animations/HippoG/Hippo0.0036.png" id="86_abp4k"]
[ext_resource type="Texture2D" uid="uid://dxa1agusl04or" path="res://Animations/HippoG/Hippo0.0037.png" id="87_eak78"]
[ext_resource type="Texture2D" uid="uid://bn6jhqh13m1dd" path="res://Animations/HippoG/Hippo0.0038.png" id="88_gywsa"]
[ext_resource type="Texture2D" uid="uid://ciorvy74fk8br" path="res://Animations/HippoG/Hippo0.0039.png" id="89_283ev"]
[ext_resource type="Texture2D" uid="uid://ba2al3x8yum02" path="res://Animations/HippoG/Hippo0.0040.png" id="90_joa3e"]
[ext_resource type="Texture2D" uid="uid://bphe5uns1c16d" path="res://Animations/HippoG/Hippo0.0041.png" id="91_i83hq"]
[ext_resource type="Texture2D" uid="uid://bvg8srt5swvs0" path="res://Animations/HippoG/Hippo0.0042.png" id="92_bpbd4"]
[ext_resource type="Texture2D" uid="uid://g36jl3t2ivin" path="res://Animations/HippoG/Hippo0.0043.png" id="93_v8okj"]
[ext_resource type="Texture2D" uid="uid://dn3niky2ip783" path="res://Animations/HippoG/Hippo0.0044.png" id="94_vetti"]
[ext_resource type="Texture2D" uid="uid://bvfp040y6xw48" path="res://Animations/HippoG/Hippo0.0045.png" id="95_ajn1s"]
[ext_resource type="Texture2D" uid="uid://csllea5d8wg77" path="res://Animations/HippoG/Hippo0.0046.png" id="96_odf31"]
[ext_resource type="Texture2D" uid="uid://cfmkn65k6gev6" path="res://Animations/HippoG/Hippo0.0047.png" id="97_bk4ry"]
[ext_resource type="Texture2D" uid="uid://cqegq0voion4m" path="res://Animations/HippoG/Hippo1.png" id="98_r5tlg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gqv20"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7lese")
}, {
"duration": 1.0,
"texture": ExtResource("2_2b6w8")
}, {
"duration": 1.0,
"texture": ExtResource("3_2l11a")
}, {
"duration": 1.0,
"texture": ExtResource("4_27q8y")
}, {
"duration": 1.0,
"texture": ExtResource("5_jofmm")
}, {
"duration": 1.0,
"texture": ExtResource("6_7fy06")
}, {
"duration": 1.0,
"texture": ExtResource("7_6yfdl")
}, {
"duration": 1.0,
"texture": ExtResource("8_ihuce")
}, {
"duration": 1.0,
"texture": ExtResource("9_5ovb0")
}, {
"duration": 1.0,
"texture": ExtResource("10_rot1j")
}, {
"duration": 1.0,
"texture": ExtResource("11_g6q7a")
}, {
"duration": 1.0,
"texture": ExtResource("12_ah7cb")
}, {
"duration": 1.0,
"texture": ExtResource("13_1cx7e")
}, {
"duration": 1.0,
"texture": ExtResource("14_twmhp")
}, {
"duration": 1.0,
"texture": ExtResource("15_f1w4n")
}, {
"duration": 1.0,
"texture": ExtResource("16_bj6b7")
}, {
"duration": 1.0,
"texture": ExtResource("17_uinrf")
}, {
"duration": 1.0,
"texture": ExtResource("18_r46as")
}, {
"duration": 1.0,
"texture": ExtResource("19_k8g8u")
}, {
"duration": 1.0,
"texture": ExtResource("20_2dm2c")
}, {
"duration": 1.0,
"texture": ExtResource("21_ce2fw")
}, {
"duration": 1.0,
"texture": ExtResource("22_ju184")
}, {
"duration": 1.0,
"texture": ExtResource("23_our6u")
}, {
"duration": 1.0,
"texture": ExtResource("24_8ui1b")
}, {
"duration": 1.0,
"texture": ExtResource("25_cv5b8")
}, {
"duration": 1.0,
"texture": ExtResource("26_v7xlf")
}, {
"duration": 1.0,
"texture": ExtResource("27_muvbc")
}, {
"duration": 1.0,
"texture": ExtResource("28_xxrml")
}, {
"duration": 1.0,
"texture": ExtResource("29_b42xr")
}, {
"duration": 1.0,
"texture": ExtResource("30_cmb6h")
}, {
"duration": 1.0,
"texture": ExtResource("31_wrlit")
}, {
"duration": 1.0,
"texture": ExtResource("32_8hhq4")
}, {
"duration": 1.0,
"texture": ExtResource("33_vemjc")
}, {
"duration": 1.0,
"texture": ExtResource("34_bqrxk")
}, {
"duration": 1.0,
"texture": ExtResource("35_hdim7")
}, {
"duration": 1.0,
"texture": ExtResource("36_cgbkt")
}, {
"duration": 1.0,
"texture": ExtResource("37_8uo3d")
}, {
"duration": 1.0,
"texture": ExtResource("38_4jqf2")
}, {
"duration": 1.0,
"texture": ExtResource("39_kcyw8")
}, {
"duration": 1.0,
"texture": ExtResource("40_nv605")
}, {
"duration": 1.0,
"texture": ExtResource("41_gf7bl")
}, {
"duration": 1.0,
"texture": ExtResource("42_y14cu")
}, {
"duration": 1.0,
"texture": ExtResource("43_5uklu")
}, {
"duration": 1.0,
"texture": ExtResource("44_5nra8")
}, {
"duration": 1.0,
"texture": ExtResource("45_13x6n")
}, {
"duration": 1.0,
"texture": ExtResource("46_rb573")
}, {
"duration": 1.0,
"texture": ExtResource("47_ocwye")
}, {
"duration": 1.0,
"texture": ExtResource("48_xn4bc")
}],
"loop": true,
"name": &"Bully",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("49_1co83")
}],
"loop": true,
"name": &"Bully1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_dfr6v")
}, {
"duration": 1.0,
"texture": ExtResource("51_sfrsk")
}, {
"duration": 1.0,
"texture": ExtResource("52_j7ddr")
}, {
"duration": 1.0,
"texture": ExtResource("53_mnkb4")
}, {
"duration": 1.0,
"texture": ExtResource("54_lb4u7")
}, {
"duration": 1.0,
"texture": ExtResource("55_uruej")
}, {
"duration": 1.0,
"texture": ExtResource("56_l25sw")
}, {
"duration": 1.0,
"texture": ExtResource("57_d77mw")
}, {
"duration": 1.0,
"texture": ExtResource("58_k8jix")
}, {
"duration": 1.0,
"texture": ExtResource("59_jeer1")
}, {
"duration": 1.0,
"texture": ExtResource("60_2rdqv")
}, {
"duration": 1.0,
"texture": ExtResource("61_inwjx")
}, {
"duration": 1.0,
"texture": ExtResource("62_swkax")
}, {
"duration": 1.0,
"texture": ExtResource("63_q70bg")
}, {
"duration": 1.0,
"texture": ExtResource("64_fl5f7")
}, {
"duration": 1.0,
"texture": ExtResource("65_1v6ll")
}, {
"duration": 1.0,
"texture": ExtResource("66_dxt5m")
}, {
"duration": 1.0,
"texture": ExtResource("67_rikbl")
}, {
"duration": 1.0,
"texture": ExtResource("68_m7t10")
}, {
"duration": 1.0,
"texture": ExtResource("69_uocar")
}, {
"duration": 1.0,
"texture": ExtResource("70_iegl3")
}, {
"duration": 1.0,
"texture": ExtResource("71_nr5vv")
}, {
"duration": 1.0,
"texture": ExtResource("72_mw7fe")
}, {
"duration": 1.0,
"texture": ExtResource("73_xhvuo")
}, {
"duration": 1.0,
"texture": ExtResource("74_npmmt")
}, {
"duration": 1.0,
"texture": ExtResource("75_fm0k7")
}, {
"duration": 1.0,
"texture": ExtResource("76_vfvy1")
}, {
"duration": 1.0,
"texture": ExtResource("77_ath0v")
}, {
"duration": 1.0,
"texture": ExtResource("78_yhpis")
}, {
"duration": 1.0,
"texture": ExtResource("79_2d380")
}, {
"duration": 1.0,
"texture": ExtResource("80_cgdyl")
}, {
"duration": 1.0,
"texture": ExtResource("81_112y2")
}, {
"duration": 1.0,
"texture": ExtResource("82_4r418")
}, {
"duration": 1.0,
"texture": ExtResource("83_ct24y")
}, {
"duration": 1.0,
"texture": ExtResource("84_f2orq")
}, {
"duration": 1.0,
"texture": ExtResource("85_galet")
}, {
"duration": 1.0,
"texture": ExtResource("86_abp4k")
}, {
"duration": 1.0,
"texture": ExtResource("87_eak78")
}, {
"duration": 1.0,
"texture": ExtResource("88_gywsa")
}, {
"duration": 1.0,
"texture": ExtResource("89_283ev")
}, {
"duration": 1.0,
"texture": ExtResource("90_joa3e")
}, {
"duration": 1.0,
"texture": ExtResource("91_i83hq")
}, {
"duration": 1.0,
"texture": ExtResource("92_bpbd4")
}, {
"duration": 1.0,
"texture": ExtResource("93_v8okj")
}, {
"duration": 1.0,
"texture": ExtResource("94_vetti")
}, {
"duration": 1.0,
"texture": ExtResource("95_ajn1s")
}, {
"duration": 1.0,
"texture": ExtResource("96_odf31")
}, {
"duration": 1.0,
"texture": ExtResource("97_bk4ry")
}],
"loop": true,
"name": &"Victim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("98_r5tlg")
}],
"loop": true,
"name": &"Victim1",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntoq6"]
size = Vector2(186, 150)

[node name="Target" type="Area2D"]
script = ExtResource("1_3lg0m")
metadata/_edit_lock_ = true

[node name="TargetFace" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_gqv20")
animation = &"Victim1"
speed_scale = 5.0

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -108.0
offset_top = -89.0
offset_right = 104.0
offset_bottom = 97.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 17)
shape = SubResource("RectangleShape2D_ntoq6")

[node name="TargetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DispTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Effects" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TargetTimer" to="." method="_on_target_timer_timeout"]
[connection signal="timeout" from="DispTimer" to="." method="_on_disp_timer_timeout"]
